# zorn-mesh

./: .dockerignore  .gitignore  .ralphrc  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  RELEASE.md  jest.config.js  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: docker.yml  release.yml
.ralph/: .circuit_breaker_state  .claude_session_id  .last_reset  .loop_start_sha  .ralph_session  .ralph_session_history  .response_analysis  @AGENT.md  @fix_plan.md  PROJECT_CONTEXT.md  PROMPT.md  SPECS_CHANGELOG.md  SPECS_INDEX.md  progress.json  status.json
.ralph/specs/implementation-artifacts/: sprint-status.yaml
.ralph/specs/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-27.md  prd-validation-report.md  sprint-change-proposal-2026-04-27.md  ux-design-directions.html  ux-design-specification.md  validation-report-prd-2026-04-27.md
_bmad/: config.toml  config.user.toml  config.yaml
_bmad-output/: project-context.md
_bmad-output/planning-artifacts/: prd.md  product-brief-zorn-mesh-distillate.md  product-brief-zorn-mesh.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
apps/local-ui/: README.md  package.json
apps/local-ui/src/: main.tsx  quality-gates.test.ts  quality-gates.ts  scope.ts  taxonomies.ts  tokens.ts
apps/local-ui/src/components/: index.ts
bmalph/: config.json
bmalph/state/: current-phase.json
conformance/: README.md  manifest.toml
conformance/ui/: README.md  manifest.toml
crates/zornmesh-broker/: Cargo.toml
crates/zornmesh-broker/src/: lib.rs
crates/zornmesh-broker/tests/: agent_registration_contract.rs  authorization_contract.rs  backpressure_contract.rs  cancellation_contract.rs  capabilities_contract.rs  coordination_outcomes.rs  idempotency_contract.rs  lease_contract.rs  multi_connection_contract.rs  observability_contract.rs  request_reply_contract.rs  secret_redaction_contract.rs  socket_trust_contract.rs  stream_contract.rs  subject_routing.rs
crates/zornmesh-cli/: Cargo.toml
crates/zornmesh-cli/fixtures/: README.md  completion-bash.stdout  daemon-help.stdout  root-help.stdout  service-help.stdout  tail-help.stdout
crates/zornmesh-cli/src/: lib.rs  main.rs
crates/zornmesh-cli/src/broker/: mod.rs
crates/zornmesh-cli/src/daemon/: mod.rs
crates/zornmesh-cli/src/debate/: audit.rs  cli_runner.rs  envelopes.rs  mod.rs  orchestrator.rs  platforms.rs  run.rs  worker.rs
crates/zornmesh-cli/src/proto/: mod.rs
crates/zornmesh-cli/src/sdk/: mod.rs  spawn.rs
crates/zornmesh-cli/src/store/: mod.rs
crates/zornmesh-cli/tests/: broker_agent_registration_contract.rs  broker_authorization_contract.rs  broker_backpressure_contract.rs  broker_cancellation_contract.rs  broker_capabilities_contract.rs  broker_coordination_outcomes.rs  broker_idempotency_contract.rs  broker_lease_contract.rs  broker_multi_connection_contract.rs  broker_observability_contract.rs  broker_request_reply_contract.rs  broker_secret_redaction_contract.rs  broker_socket_trust_contract.rs  broker_stream_contract.rs  broker_subject_routing.rs  cli_contract.rs  core_agent_card_contract.rs  core_coordination_contract.rs  core_redaction_contract.rs  core_trace_context_contract.rs  daemon_evidence_persistence.rs  daemon_help.rs  daemon_lifecycle.rs  debate_contract.rs  golden_help.rs  local_ui_scope.rs  proto_coordination_frames.rs  proto_envelope_round_trip.rs  sdk_connect_contract.rs  sdk_pubsub_contract.rs  stdio_bridge_contract.rs  store_durable_subscription_contract.rs  store_evidence_store_contract.rs
crates/zornmesh-core/: Cargo.toml
crates/zornmesh-core/src/: lib.rs
crates/zornmesh-core/tests/: agent_card_contract.rs  coordination_contract.rs  redaction_contract.rs  trace_context_contract.rs
crates/zornmesh-daemon/: Cargo.toml
crates/zornmesh-daemon/src/: lib.rs
crates/zornmesh-daemon/tests/: evidence_persistence.rs  lifecycle.rs
crates/zornmesh-proto/: Cargo.toml
crates/zornmesh-proto/src/: lib.rs
crates/zornmesh-proto/tests/: coordination_frames.rs  envelope_round_trip.rs
crates/zornmesh-rpc/: Cargo.toml
crates/zornmesh-rpc/src/: lib.rs
crates/zornmesh-sdk/: Cargo.toml
crates/zornmesh-sdk/src/: lib.rs  spawn.rs
crates/zornmesh-sdk/tests/: connect_contract.rs  pubsub_contract.rs
crates/zornmesh-store/: Cargo.toml
crates/zornmesh-store/src/: lib.rs
crates/zornmesh-store/tests/: durable_subscription_contract.rs  evidence_store_contract.rs
crates/zornmesh-xtask/: Cargo.toml
crates/zornmesh-xtask/src/: main.rs
crates/zornmesh-xtask/tests/: entrypoints.rs
docs/: env-vars.md  install.md  research-implementation-plan.md
docs/architecture/: local-ui-amendment.md
examples/: direct-messaging.ts  pubsub.ts  request-reply.ts
fixtures/cli/: completion-bash.stdout  daemon-help.stdout  root-help.stdout  trace-help.stdout
fixtures/coordination/: README.md  contract.txt  manifest.toml
fixtures/errors/: README.md  manifest.toml
fixtures/pubsub/: subject-routing.txt
fixtures/sdk/: connect-contract.json
fixtures/ui/: README.md  quality-readiness.json
sdks/typescript/: package.json  tsconfig.json
sdks/typescript/src/: index.ts
sdks/typescript/test/: sdk.test.ts
src/: index.ts
src/cli/: index.ts
src/core/: index.ts  registry.ts  router.ts  schema.ts  store.ts
src/transport/: http.ts  index.ts  stdio.ts
test-infra/: README.md  manifest.toml
tests/: core.test.ts  router.test.ts  transport.test.ts
