[workspace]
resolver = "3"
members = [
    "crates/zornmesh-cli",
    "crates/zornmesh-xtask",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/nebrass/zorn-mesh"
homepage = "https://github.com/nebrass/zorn-mesh"
authors = ["zornmesh contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
