[package]
name = "zornmesh-broker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
zornmesh-core = { path = "../zornmesh-core" }
zornmesh-store = { path = "../zornmesh-store" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
