[package]
name = "zornmesh-broker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Subject-pattern pub/sub broker for the zornmesh local-first agent mesh."
readme = "../../README.md"
keywords = ["mcp", "agent", "mesh", "pubsub", "broker"]
categories = ["network-programming", "asynchronous"]

[dependencies]
zornmesh-core = { path = "../zornmesh-core", version = "0.1.0" }
zornmesh-store = { path = "../zornmesh-store", version = "0.1.0" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
