[package]
name = "zornmesh-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
zornmesh-broker = { path = "../zornmesh-broker" }
zornmesh-core = { path = "../zornmesh-core" }
zornmesh-daemon = { path = "../zornmesh-daemon" }
zornmesh-rpc = { path = "../zornmesh-rpc" }
zornmesh-sdk = { path = "../zornmesh-sdk" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "zornmesh"
path = "src/main.rs"

[lints]
workspace = true

[dev-dependencies]
serde_json = "1.0.149"
