[package]
name = "zornmesh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Shared primitives for the zornmesh local-first agent mesh."
readme = "../../README.md"
keywords = ["mcp", "agent", "mesh", "local-first", "primitives"]
categories = ["data-structures", "development-tools"]

[lib]
path = "src/lib.rs"

[lints]
workspace = true
