[package]
name = "zornmesh-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Per-user daemon backing the zornmesh local-first agent mesh."
readme = "../../README.md"
keywords = ["mcp", "agent", "mesh", "daemon", "local-first"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
signal-hook = "0.3"
zornmesh-broker = { path = "../zornmesh-broker", version = "0.1.0" }
zornmesh-core = { path = "../zornmesh-core", version = "0.1.0" }
zornmesh-proto = { path = "../zornmesh-proto", version = "0.1.0" }
zornmesh-rpc = { path = "../zornmesh-rpc", version = "0.1.0" }
zornmesh-store = { path = "../zornmesh-store", version = "0.1.0" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
