[package]
name = "zornmesh-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Wire protocol and envelope round-trip primitives for zornmesh."
readme = "../../README.md"
keywords = ["mcp", "agent", "mesh", "protocol", "envelope"]
categories = ["encoding", "network-programming"]

[dependencies]
zornmesh-core = { path = "../zornmesh-core", version = "0.1.0" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
