[package]
name = "zornmesh-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Rust SDK for the zornmesh local-first agent mesh."
readme = "../../README.md"
keywords = ["mcp", "agent", "mesh", "sdk", "local-first"]
categories = ["api-bindings", "network-programming"]

[dependencies]
zornmesh-core = { path = "../zornmesh-core", version = "0.1.0" }
zornmesh-daemon = { path = "../zornmesh-daemon", version = "0.1.0" }
zornmesh-proto = { path = "../zornmesh-proto", version = "0.1.0" }
zornmesh-rpc = { path = "../zornmesh-rpc", version = "0.1.0" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
