[package]
name = "zornmesh-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Persistence layer (evidence, audit, retention) for the zornmesh local-first agent mesh."
readme = "../../README.md"
keywords = ["mcp", "agent", "mesh", "evidence", "audit"]
categories = ["database", "development-tools"]

[dependencies]
zornmesh-core = { path = "../zornmesh-core", version = "0.1.0" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
